@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Fix searching for duplicates on some databases (Bug #10383).
 * [mjr] Add and support more attributes by default.
  </notes>
  <contents>
@@ -1245,6 +1246,7 @@
    <date>2011-08-02</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Fix searching for duplicates on some databases (Bug #10383).
 * [mjr] Add and support more attributes by default.
    </notes>
   </release>
